--- a/paper/Paper.tex
+++ b/paper/Paper.tex
@@ -108,7 +108,7 @@ available data.
                     				\end{center}
                   			\end{figure}
 					
-					From the TeraSort results we see a different performance from Hadoop 2 than its predecessor in runtimes during testing. While on average Hadoop 1 maintains a somewhat constant runtime speed for every node configuration there is an extreme outlier at four datanotdes that has a much lower computation time compared to its other times in Hadoop 1 and compared to the tests ran in the Hadoop 2 environment. Other circumstances that might be involved in affecting the runtime such as communication time inside Palmetto when the tests run but it also might be that at four datanodes the system is optimized in running the TeraSort program compared to other node setups. It's performance graph does bare similar resemblance to performance speedups with Hadoop 2 but with a slightly different scale.
+					From the TeraSort results we see a different performance from Hadoop 2 than its predecessor in runtimes during testing. While on average Hadoop 1 maintains a somewhat constant runtime speed for every node configuration there is an extreme outlier at four datanodes that has a much lower computation time compared to its other times in Hadoop 1 and compared to the tests ran in the Hadoop 2 environment. Other circumstances that might be involved in affecting the runtime such as communication time inside Palmetto when the tests run but it also might be that at four datanodes the system is optimized in running the TeraSort program compared to other node setups. It's performance graph does bare similar resemblance to performance speedups with Hadoop 2 but with a slightly different scale.
 				\subsection{Overall Performance}
 						\begin{figure}[h]
                    					\begin{center}
