Added refrences from Alex.

--- a/paper/Paper.bib
+++ b/paper/Paper.bib
@@ -40,3 +40,13 @@
     title = "Around the World in 80 Days",
     publisher = "Gutenberg Project",
     year = 2008}
+@book{hadoopguide,
+    author = "Tom White",
+    title = "Hadoop: The Definitive Guide",
+    publisher = "O'Reilly",
+    year = "2012"}
+@online{hadoopyarn,
+    author = "Alexandre Jorge Fonseca",
+    title = "Hadoop YARN Installation: The Definitive Guide",
+    url = "http://www.alexjf.net/blog/distributed-systems/hadoop-yarn-installation-definitive-guide",
+    urldate = "2013-05-13"}
