--- a/paper/Paper.tex
+++ b/paper/Paper.tex
@@ -30,7 +30,7 @@
 
 			Joshua was responsible for benchmark development and testing along with collaborating with the partners on various parts of the project. His approximate four years in using the Linux operating system and installing and configuring software for it meant that he was able to quickly install and configure a system with installations of Hadoop and Hadoop 2. Joshua was also responsible for developing the benchmark procedures that allowed the team to compare the performance of myHadoop2 to its predecessor using the testing situations in WordCount and TeraSort. The development of the benchmarks was aided by the number of years of Java experience Joshua has learned and worked with.
 
-			Alex was primarily responsible for the development of the myHadoop2 script with assistance from Joshua. Alex is currently working with Clemson Computing and Information Technology, or CCIT, to get Hadoop 2 working on the Palmetto cluster, and was able to bring this experience to the project and successfully implement that goal for both the success of the project and the goal of CCIT. He is directly involved in the implementation of Hadoop 2 over OrangeFS as well, which greatly benefited him in progressing the myHadoop scripting on the cluster efficiently and with the best performance.
+			Alex was primarily responsible for the development of the myHadoop2 script with assistance from Joshua. Alex is currently working with Clemson Computing and Information Technology, or CCIT, to get Hadoop 2 working on the Palmetto cluster, and was able to bring this experience to the project and successfully implement that goal for both the success of the project and the goal of CCIT. He is directly involved in the implementation of Hadoop 2 over OrangeFS as well, which greatly benefited him in progressing the myHadoop scripting on the cluster efficiently and with the best performance. He spent much of the Spring 2104 academic semester researching implementations and configuration s for old and new Hadoop versions\cite{hadoopguide}\cite{hadoopyarn}
 
 			Mark was responsible for documentation of the project and collaboration on development with Alex and Joshua with the implementation to complete this objective. Mark has worked as a functional analyst for the past three years and has experience in documentation of analyses and projects. He worked closely with Joshua and Alex throughout the development and implementation processes to bring a complete and detailed understanding of the project to its documentation and presentation.
 
